--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
               <li><a class="dropdown-item" href="#">Desserts</a></li>
             </ul>
           </li>
+          <li class="nav-item">
+            <a class="nav-link " href="#">Offers</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " href="#">Services</a>
+          </li>
 
           <li class="nav-item">
             <a class="nav-link " href="#">About Us</a>
@@ -69,7 +75,7 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
 
-        <img src="images/valentin-salja--2UKHw7fAZI-unsplash.jpg" class="d-block w-100"width="1600" height="480" alt="cafe">
+        <img src="https://source.unsplash.com/1600x600/?cafe" class="d-block w-100" alt="cafe">
         <div class="carousel-caption d-none d-md-block">
 
           <h1>
